# TP_RocketLeague

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CodeDocumentation.md  Makefile  Manual.md  README.md  RocketLeague.cbp  UserGuide.md  client  client_main.cpp  cmake_install.cmake  server  server_main.cpp
.cmake/api/v1/reply/: cache-v2-18b8427b78676514c214.json  cache-v2-5a58e9c34dddd9873101.json  cache-v2-5f9ca3504461cb690774.json  cache-v2-6e1b334e33fc515203e6.json  (+109 more)
common_lib/: protocolo.cpp  protocolo.h
images/: antes-de-arrancar-párate-a-mirar-las-opciones..avif
lib_client/: CMakeLists.txt  Client.cpp
lib_server/: CMakeLists.txt  Server.h
libs/libSDL2pp/: CMakeLists.txt
libs/sub_client/: ActionCreateRoom.cpp  ActionJoinRoom.cpp  ActionJoinRoom.h  ActionsSenderThread.cpp  ActionsSenderThread.h  Animation.cpp  Animation.h  Ball.h  Button.cpp  Button.h  CMakeLists.txt  Client.cpp  Client.h  ClientAction.cpp  ClientProtocol.cpp  ClientProtocol.h  CreateACK.cpp  CreateACK.h  GameLoop.cpp  GameLoop.h  GameRenderer.cpp  GameRenderer.h  GameSprite.h  GameUpdate.cpp  GameUpdate.h  JoinACK.cpp  JoinACK.h  ListACK.cpp  ListACK.h  MainWindow.h  MainWindwow.cpp  Player.cpp  Player.h  RenderThread.cpp  RenderThread.h  ThreadActionsSender.cpp  ThreadActionsSender.h  UpdatesReceiverThread.cpp  UpdatesReceiverThread.h  WaitingForGameToStartThread.cpp  (+5 more)
libs/sub_client/client_actions/: ActionCreateRoom.cpp  ActionCreateRoom.h  ActionJoinRoom.cpp  ActionJoinRoom.h  ActionListRooms.cpp  ActionListRooms.h  ClientAction.h  ClientActionMove.cpp  ClientActionMove.h
libs/sub_client/client_qt/: Button.cpp  mainwindow.cpp  mainwindow.h
libs/sub_client/client_sdl/: Animation.cpp  Animation.h  Ball.cpp  Ball.h  BallSprite.cpp  BallSprite.h  Car.cpp  Car.h  CarSprite.cpp  CarSprite.h  GameLoop.cpp  GameLoop.h  GameSprite.cpp  GameSprite.h  GameTime.h  GameTimeSprite.cpp  Player.cpp  Player.h  Score.cpp  Score.h  ScoreSprite.cpp  ScoreSprite.h  Worldview.cpp  Worldview.h  gamescene.cpp  gamescene.h
libs/sub_client/client_sdl/sprites/: BallSprite.cpp  BallSprite.h  CarSprite.cpp  CarSprite.h  GameSprite.h  GameStatsSprite.cpp  GameStatsSprite.h  GameTimeSprite.cpp  GameTimeSprite.h  ScoreSprite.cpp  ScoreSprite.h
libs/sub_client/client_updates/: ClientCreateACK.cpp  ClientCreateACK.h  ClientJoinACK.cpp  ClientJoinACK.h  ClientListACK.cpp  ClientListACK.h  ClientStartedGameACK.cpp  ClientStartedGameACK.h  ClientUpdate.cpp  ClientUpdate.h  ClientUpdateStats.cpp  ClientUpdateStats.h  ClientUpdateWorld.cpp  ClientUpdateWorld.h
libs/sub_common/: Action.cpp  Action.h  ActionCreate.cpp  ActionCreate.h  ActionJoin.cpp  ActionJoin.h  ActionList.cpp  ActionList.h  ActionMove.cpp  ActionMove.h  ActionUpdate.cpp  ActionUpdate.h  BlockingQueue.h  CMakeLists.txt  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  Information.cpp  Information.h  MonitorSocket.cpp  MonitorSocket.h  ProtectedQueue.h  ProtectedQueueBounded.h  QueueIsEmptyException.cpp  QueueIsEmptyException.h  Update.cpp  Update.h  protocolo.cpp  protocolo.h  socket.cpp  thread.cpp  thread.h
libs/sub_common/sub_action/: Action.cpp  Action.h  ActionCreate.cpp  ActionCreate.h  ActionDown.cpp  ActionDown.h  ActionJoin.cpp  ActionJoin.h  ActionJump.cpp  ActionJump.h  ActionLeft.cpp  ActionLeft.h  ActionList.cpp  ActionList.h  ActionMove.cpp  ActionMove.h  ActionRight.cpp  ActionRight.h  ActionTurbo.cpp  ActionTurbo.h  ActionUp.cpp  ActionUp.h  ActionUpdate.cpp  ActionUpdate.h  ActionUpdateBall.cpp  ActionUpdateBall.h  ActionUpdateCar.cpp  ActionUpdateCar.h  ActionUpdateScore.cpp  ActionUpdateScore.h  CMakeLists.txt
libs/sub_server/: Action.cpp  Action.h  ActionCreate.cpp  ActionCreate.h  ActionCreateServer.cpp  ActionCreateServer.h  ActionJoin.cpp  ActionJoin.h  ActionJoinServer.cpp  ActionJoinServer.h  ActionList.cpp  ActionList.h  ActionListServer.cpp  ActionListServer.h  ActionMaker.cpp  ActionMaker.h  ActionUpdate.cpp  ActionUpdate.h  Ball.cpp  Ball.h  CMakeLists.txt  Car.cpp  Car.h  ClientManager.cpp  ClientManager.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  Game.cpp  Game.h  Match.cpp  Match.h  MyContactListener.cpp  MyContactListener.h  Server.cpp  Server.h  ServerProtocolo.cpp  ServerProtocolo.h  game.cpp  (+5 more)
libs/sub_server/server_actions/: ServerAction.h  ServerActionMove.cpp  ServerActionMove.h  ServerCreateRoom.cpp  ServerCreateRoom.h  ServerJoinRoom.cpp  ServerJoinRoom.h  ServerListRooms.cpp  ServerListRooms.h
libs/sub_server/server_box2d/: Ball.cpp  Ball.h  Car.cpp  Car.h  Match.cpp  Match.h  MyContactListener.cpp  MyContactListener.h
libs/sub_server/server_updates/: ServerCreateACK.cpp  ServerCreateACK.h  ServerJoinACK.cpp  ServerJoinACK.h  ServerListACK.cpp  ServerListACK.h  ServerStartedGameACK.cpp  ServerStartedGameACK.h  ServerUpdate.h  ServerUpdateStats.cpp  ServerUpdateStats.h  ServerUpdateWorld.cpp  ServerUpdateWorld.h
rocketLeague_tests/: CMakeLists.txt  protocoloTest.cpp
sub_client/: Animation.h  CMakeLists.txt  Client.cpp  Client.h  GameLoop.cpp  GameLoop.h  Makefile  Player.cpp  Player.h  cmake_install.cmake  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
sub_common/: CMakeLists.txt  Makefile  cmake_install.cmake  protocolo.cpp  protocolo.h  thread.cpp  thread.h
sub_server/: CMakeLists.txt  Makefile  Server.cpp  Server.h  clientManager.cpp  clientManager.h  cmake_install.cmake  game.cpp  game.h  gameManager.cpp  gameManager.h
tests/: CMakeLists.txt  ClientProtocolTest.cpp  ClientProtocoloTest.cpp  GamesTest.cpp  Makefile  MockClientProtocol.h  MockServerProtocol.h  ServerProtocolTest.cpp  actionsTest.cpp  blockingQueueTest.cpp  cmake_install.cmake  protocoloTest.cpp  serverTest.cpp  tests
tests/client_protocol_test/: ClientProtocolTest.cpp  MockACKProtocol.h  MockActionProtocol.h  MockWorldProtocol.h
tests/server_protocol_test/: MockActionProtocol.h  MockMoveProtocol.h  MockStatsProtocol.h  MockUpdateProtocol.h  MockUpdateWorldProtocol.h  ServerProtocolTest.cpp
ui/: Greeter.ui  MainWindow.ui  mainwindow.ui
